--- a/StreamusicClientAndroid/StreamusicClientAndroid/Resources/layout/activity_paginaprincipal.xml
+++ b/StreamusicClientAndroid/StreamusicClientAndroid/Resources/layout/activity_paginaprincipal.xml
@@ -1,18 +1,23 @@
-﻿<?xml version="1.0" encoding="utf-8" ?> 
+﻿ 
  <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_paginaprincipal"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <FrameLayout
+        android:id="@+id/content_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
     
-    <!--<android.support.design.widget.BottomNavigationView
+    <android.support.design.widget.BottomNavigationView
       android:id="@+id/bottom_navigation"
       android:layout_width="match_parent"
       android:layout_height="56dp"
       android:layout_gravity="start"
       android:layout_alignParentBottom="true"
-      android:background="@android:color/black"
+      android:background="@android:color/holo_blue_dark"
       app:elevation="16dp"
-      app:menu="@menu/bottom_navigation_main" />-->
+      app:menu="@menu/bottom_navigation_main" />
   </RelativeLayout>
