Se arreglo un error en mostrar reproductor y se añade el manejo de listas de canciones.

--- a/StreamusicClientAndroid/StreamusicClientAndroid/Resources/layout/activity_main.xml
+++ b/StreamusicClientAndroid/StreamusicClientAndroid/Resources/layout/activity_main.xml
@@ -27,7 +27,7 @@
     <EditText
         android:layout_width="match_parent"
         android:inputType="textPassword"
-        android:text="pass"
+        android:text="rocapass"
         android:id="@+id/EditTextContrseña"
         android:layout_height="wrap_content"/>
 
