--- a/StreamusicClientAndroid/StreamusicClientAndroid/Resources/layout/activity_paginaprincipal.xml
+++ b/StreamusicClientAndroid/StreamusicClientAndroid/Resources/layout/activity_paginaprincipal.xml
@@ -8,6 +8,7 @@
 
     <FrameLayout
         android:id="@+id/content_frame"
+        android:layout_above="@id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
     
