--- a/StreamusicClientAndroid/StreamusicClientAndroid/Resources/layout/fragment_reproductor.xml
+++ b/StreamusicClientAndroid/StreamusicClientAndroid/Resources/layout/fragment_reproductor.xml
@@ -49,7 +49,21 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"/>
         </RelativeLayout>
-
+        <RelativeLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/txtDuracionActual"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+                android:text="0:00"/>
+            <TextView
+                android:id="@+id/txtDuracionTotal"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+                android:text="0:00"
+                android:layout_alignParentRight="true"/>
+        </RelativeLayout>
         <SeekBar
         android:layout_alignParentBottom="true"
         android:id="@+id/seekBarTiempo"
