Se cambia la forma de cambiar de fragmentos para tener reproductorfragment en el fondo.

--- a/StreamusicClientAndroid/StreamusicClientAndroid/Resources/layout/fragment_vermislistas.xml
+++ b/StreamusicClientAndroid/StreamusicClientAndroid/Resources/layout/fragment_vermislistas.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:padding="15dp"
@@ -10,12 +10,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Mis listas de reproducción"
-        android:textSize="24sp"/>
+        android:textSize="28sp"/>
 
-    <TextView
+    <Button
+        android:id="@+id/buttonMiHistorial"
         android:text="Mi historial"
         android:textSize="20sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerViewListasDeReproduccion"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </ScrollView>
 
 </LinearLayout>
