--- a/StreamusicClientAndroid/StreamusicClientAndroid/Resources/layout/fragment_reproductor.xml
+++ b/StreamusicClientAndroid/StreamusicClientAndroid/Resources/layout/fragment_reproductor.xml
@@ -8,7 +8,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
+    <FrameLayout
+        android:id="@+id/listViewCancionesEnReproduccion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
