--- a/StreamusicClientAndroid/StreamusicClientAndroid/Resources/layout/activity_paginaprincipal.xml
+++ b/StreamusicClientAndroid/StreamusicClientAndroid/Resources/layout/activity_paginaprincipal.xml
@@ -1,27 +1,58 @@
-﻿<?xml version="1.0" encoding="utf-8"> 
+﻿
 
-
- <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+    
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_paginaprincipal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
-        android:id="@+id/content_frame"
-        android:layout_above="@id/bottom_navigation"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-    
-    <android.support.design.widget.BottomNavigationView
-      android:id="@+id/bottom_navigation"
-      android:layout_width="match_parent"
-      android:layout_height="56dp"
-      android:layout_gravity="start"
-      android:layout_alignParentBottom="true"
-      android:background="@android:color/holo_blue_dark"
-      app:elevation="16dp"
-      app:menu="@menu/bottom_navigation_main" />
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:minHeight="?android:attr/actionBarSize"
+        android:background="#33b86c"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:layout_scrollFlags="scroll|enterAlways"/>
 
-  </RelativeLayout>
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:fitsSystemWindows="true"
+        android:layout_height="match_parent">
+
+        <RelativeLayout android:id="@+id/activity_paginaprincipal"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <FrameLayout
+                android:id="@+id/content_frame"
+                android:layout_above="@id/bottom_navigation"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+    
+            <android.support.design.widget.BottomNavigationView
+                android:id="@+id/bottom_navigation"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:layout_gravity="start"
+                android:layout_alignParentBottom="true"
+                android:background="@android:color/holo_blue_dark"
+                app:elevation="16dp"
+                app:menu="@menu/bottom_navigation_main" />
+
+        </RelativeLayout>
+
+        <android.support.design.widget.NavigationView
+          android:id="@+id/nav_view"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_gravity="start"
+          android:fitsSystemWindows="true"
+          app:menu="@menu/menu"/>
+    
+    </android.support.v4.widget.DrawerLayout>
+</LinearLayout>
