--- a/StreamusicClientAndroid/StreamusicClientAndroid/Resources/layout/activity_paginaprincipal.xml
+++ b/StreamusicClientAndroid/StreamusicClientAndroid/Resources/layout/activity_paginaprincipal.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:padding="20dp"
         android:minHeight="?android:attr/actionBarSize"
-        android:background="#33b86c"
+        android:background="@android:color/transparent"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:layout_scrollFlags="scroll|enterAlways"/>
 
@@ -40,7 +40,7 @@
                 android:layout_height="56dp"
                 android:layout_gravity="start"
                 android:layout_alignParentBottom="true"
-                android:background="@android:color/holo_blue_dark"
+                android:background="@android:color/white"
                 app:elevation="16dp"
                 app:menu="@menu/bottom_navigation_main" />
 
