--- a/StreamusicClientAndroid/StreamusicClientAndroid/Resources/layout/fragment_reproductor.xml
+++ b/StreamusicClientAndroid/StreamusicClientAndroid/Resources/layout/fragment_reproductor.xml
@@ -11,7 +11,8 @@
     <FrameLayout
         android:id="@+id/listViewCancionesEnReproduccion"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="200dp"/>
 
     <LinearLayout
         android:orientation="vertical"
